--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -3,7 +3,10 @@
 {% block title %}Question index{% endblock %}
 
 {% block body %}
-    <h1 class="h2 mb-3">Questions</h1>
+    <div class="row">
+        <h1 class="h2">Questions</h1>
+        <hr>
+    </div>
     <div data-controller="question">
         <div class="row mb-3">
             <div class="col-3">
