--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -115,15 +115,15 @@
             </div>
             <div id="answers">
             {% for answer in question.answer['answers'] %}
-                <div class="col-8 question-answers" id="{{ answersUniqueId[loop.index0] }}">
-                    <div class="row mb-3">
-                        <div class="col-8">
+                <div class="col-8 question-answers" id="answer-{{ answersUniqueId[loop.index0] }}">
+                    <div class="row mb-3 d-flex">
+                        <div class="col-6">
                             <textarea name="answers-content-{{ answersUniqueId[loop.index0] }}"
                                       id="answer-{{ answersUniqueId[loop.index0] }}"
                                       class="form-control"
                             >{{ answer['content'] }}</textarea>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             {% if answer['is_good_answer'] == true %}
                             <div class="row mb-2">
                                 <div class="col-12">
@@ -187,6 +187,15 @@
                                 </div>
                             </div>
                             {% endif %}
+                        </div>
+                        <div class="col-2 d-flex align-items-center">
+                            <button type="button"
+                                    class="btn btn-sm btn-outline-danger"
+                                    data-action="question#onDeleteAnswer"
+                                    data-delete-id="{{ answersUniqueId[loop.index0] }}"
+                            >
+                                <i class="bi bi-trash-fill"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
